--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/pacientes_cita.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/pacientes_cita.html
@@ -84,6 +84,14 @@
                                                 <br>
                                                 <h2><center>No hay registros del paciente</center> </h2>
                                                 <br>
+                                                <center>
+                                                    <a href="/agendamiento/pacientes_cita" class="btn btn-success">
+                                                        <i class="bi bi-calendar"></i>
+                                                        Lista de pacientes<br>
+                                                    </a>
+                                                </center>
+                                                        
+                                               
                                             {% endif %}
                                 </tbody>
                         </table>
