--- a/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/listar_insumos_asignados.html
+++ b/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/listar_insumos_asignados.html
@@ -36,7 +36,7 @@
                     <table class="table table-striped table-hover">
                         <thead> 
                             <tr>
-                                {%if insumos_asignados%}
+                                {%if tratamientos_insumos_asignados%}
                                     <th>Nro Insumo</th>
                                     <th>Nombre </th>
                                     <th>Cantidad </th>
@@ -47,14 +47,18 @@
                         </thead>
 
                         <tbody>
-                                {%if insumos_asignados%}
-                                    {%for insumo in insumos_asignados%}
+                                {%if tratamientos_insumos_asignados%}
+                                    {%for c in tratamientos_insumos_asignados%}
                                         <tr>
                                             <td >{{forloop.counter}}</td>
-                                            <td >{{insumo.nombre_insumo}}</td>
-                                            <td ></td>
+                                            <td >{{c.insumo.nombre_insumo}}</td>
+                                            {%if c.tratamiento_insumo_asignado.cantidad%}
+                                                <td >{{c.tratamiento_insumo_asignado.cantidad}} {{c.tratamiento_insumo_asignado.insumo.unidad}}</td>
+                                            {%else%}
+                                                <td>0</td>
+                                            {%endif%}
                                             <td >
-                                                <a href="/insumo/editar_cantidad_insumo_asignado/{{id_tratamiento_insumo}}" class="btn btn-success">
+                                                <a href="/insumo/editar_cantidad_insumo_asignado/{{c.tratamiento_insumo_asignado.id_insumo_asig}}" class="btn btn-success">
                                                     <i class="bi bi-pencil-square"></i>
                                                     Editar cantidad
                                                 </a>
