--- a/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/modificar_insumos.html
+++ b/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/modificar_insumos.html
@@ -68,7 +68,7 @@
                             <!--tipo submit para enviar,luego son clases y colores btn, y btnblock para que muestre a lo largo de la tarjeta-->
                             <input type="submit" value="Modificar y Guardar " class= "btn btn-primary btn-block txt-white" name="_save">
                             &nbsp;
-                            <input type="reset" value="Cancelar" class= "btn btn-secondary btn-block txt-white">  
+                            <a class= "btn btn-secondary btn-block txt-white" onclick="history.back()">Cancelar</a>  
                         
                         </div> 
 
