--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos.html
@@ -60,7 +60,9 @@
                                 <th>Nro Tratamiento</th>
                                 <th>Nombre </th>
                                 <th>Precio</th>  
+                                {%if perms.gestion_tratamiento.change_tratamiento%}  
                                 <th colspan="3">Acciones </th>
+                                {%endif%}
                             </tr>
                         </thead>
 
@@ -72,11 +74,13 @@
                                     <td>{{c.precio}}</td> 
                                     {{busqueda}}
                                     <!--OPCIONES Modificar y Eliminar-->
+                                    {%if perms.gestion_tratamiento.change_tratamiento%}  
                                     <td>
                                         <a href="/tratamiento/modificar_tratamiento/{{c.codigo_tratamiento}}" class="btn btn-primary">
                                             <i class="bi-pencil-square"></i>
                                             Modificar
                                         </a>
+                                    {%endif%}
                                    
                                     </td>
                                     <!-- Eliminar-->      
@@ -89,11 +93,13 @@
                                     </td>
                                     {%endif%}
                                     <td>
+                                    {%if perms.gestion_inventario_insumo.view_insumo%}  
                                         <a href="/insumo/listar_insumos_asignados/{{c.codigo_tratamiento}}" class="btn btn-info">
                                             <i class="bi-pencil-square"></i>
                                             Insumos
                                         </a>
                                     </td>
+                                    {%endif%}
                                 </tr>
                                 {% endfor %}
                             
