inicio de impementación de crear usuario

--- a/Proyecto2/SmileSoft/webapp/templates/usuario/listar_personas_elegir.html
+++ b/Proyecto2/SmileSoft/webapp/templates/usuario/listar_personas_elegir.html
@@ -43,7 +43,7 @@
                                             Editar
                                         </a>
                                     {%else%}
-                                        <a class="btn btn-success" href="#">
+                                        <a class="btn btn-success" href="/crear_usuario/{{persona.numero_documento}}">
                                             <i class="bi bi-check2-square"></i>
                                             Elegir
                                         </a>
