Imolementacion de Cobros pendientes

--- a/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
+++ b/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
@@ -371,7 +371,9 @@
                                                   <li><a class="dropdown-item" href="/cobros/listar_cobros/"> 
                                                     <font color="black">  • Cobros registrados</font></a>
                                                   </li>
-
+                                                  <li><a class="dropdown-item" href="/cobros/listar_cobros_pendientes/"> 
+                                                    <font color="black">  • Cobros pendientes</font></a>
+                                                  </li>
                                                 </ul>
                                             </li>
                                             <!--Opcion 10-->
