--- a/Proyecto2/SmileSoft/gestion_cobros/templates/cobrar_tratamiento.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/cobrar_tratamiento.html
@@ -93,6 +93,11 @@
                     </table>
                     <div class="d-flex justify-content-center">
                         {%if tratamientos_asignados%}
+                        <a type="submit" href="#" class="btn btn-secondary btn-block txt-white">
+                            <i class="bi bi-printer"></i>
+                            Detalle previo
+                        </a>
+                        &nbsp;
                         <a type="submit" href="/cobros/registrar_cobro/{{persona.numero_documento}}/" class="btn btn-success btn-block txt-white">
                             <i class="bi bi-check2-square"></i>
                             Cobrar
