--- a/Proyecto2/SmileSoft/gestion_cobros/templates/cobrar_tratamiento.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/cobrar_tratamiento.html
@@ -34,6 +34,7 @@
                                     <th>Nro Tratamiento</th>
                                     <th>Nombre </th>
                                     <th>Precio </th>
+                                    <th >Acción</th>
                                 {%endif%}
                             </tr>
                         </thead>
@@ -45,6 +46,12 @@
                                     <td >{{forloop.counter}}</td>
                                     <td >{{tratamiento.nombre_tratamiento}}</td>
                                     <td >{{tratamiento.precio}}</td>
+                                    <td >
+                                        <a href="/cobros/eliminar_tratamiento_confirmado/{{id_tratamiento_confirmado}}" type="submit" class="btn btn-danger">
+                                            <i class="bi bi-trash3"></i>
+                                            Eliminar
+                                        </a>
+                                    </td>
                                 </tr>
                                 {% endfor %}
                                 <tr>
@@ -103,7 +110,7 @@
                             Cobrar
                         </a>
                         &nbsp;
-                        <a href="/tratamiento/listar_tratamientos_asignados/{{id_paciente}}" class="btn btn-danger"  >
+                        <a onclick="history.back()" class="btn btn-danger"  >
                             <i class="bi-x-circle"></i> 
                             Cancelar
                         </a>
