--- a/Proyecto2/SmileSoft/gestion_cobros/templates/listar_cobros_pendientes.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/listar_cobros_pendientes.html
@@ -25,6 +25,7 @@
 									<td>{{ paciente.numero_documento }}</td>
 									<td>{{ paciente.numero_documento.nombre }} {{paciente.numero_documento.apellido}}</td>
 									<td>
+										<!-- <button style="background-color: #03b6fc; border: #03b6fc; border-radius: 10%;";><i class="bi-eye"></i> Prueba</button> -->
 										<a class="btn btn-success" href="/cobros/cobrar_tratamiento/{{paciente.id_paciente}}">
 											<i class="bi-eye"></i>
 											Ver detalle
