--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/modificar_cita_usuario.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/modificar_cita_usuario.html
@@ -45,8 +45,8 @@
                     <div style="margin: 20px;" >
                         <br>
                         <div class="form-group">
-                            <label for="tratamiento_solicitado"> Motivo de Consulta</label>
-                                {{form.tratamiento_solicitado}} <br>
+                            <label for="tratamiento_simple"> Motivo de Consulta</label>
+                               {{form.tratamiento_simple}}<br>
                         </div>
                         <br>
 
