--- a/Proyecto2/SmileSoft/webapp/templates/inicio/login.html
+++ b/Proyecto2/SmileSoft/webapp/templates/inicio/login.html
@@ -77,10 +77,10 @@
                             <div class="form-group" >
                                 {% csrf_token %}
                                 <label for="remember-me" class="text-Gray">
-                                    <span>Recordar</span>
+                                    {% comment %} <span>Recordar</span>
                                     <span>
                                         <input id="remember-me" name="remember-me" type="checkbox"></input>
-                                    </span>
+                                    </span> {% endcomment %}
                                 </label>
                                 <br>
                                 <div  align="center" > <input type="submit" value="Iniciar Sesión" class="btn btn-info btn-md"> </div>
