Implementacion inconclusa de TratamientoConfirmado

--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_persona.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_persona.html
@@ -82,7 +82,7 @@
 										{%else%}
 											<a class="btn btn-info" href="/administrativo/modificar_persona_paciente/{{persona.numero_documento}}">
 												<i class="bi bi-person-plus-fill"></i>
-												Agregar como paciente
+												Añadir como paciente
 											</a>
 										{%endif%}
 									{%endif%}
