--- a/Proyecto2/SmileSoft/gestion_cobros/templates/listar_cobros_pendientes.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/listar_cobros_pendientes.html
@@ -10,12 +10,14 @@
 				<br>
 				<table class="table table-striped table-hover">
 					<thead style="border: 1cm;">
-						<tr>
-							<th>Número</th>
-							<th>N° de Documento</th>
-							<th>Nombre y apellido</th>
-							<th>Acciones</th>
-						</tr>
+						{% if pacientes %}
+							<tr>
+								<th>Número</th>
+								<th>N° de Documento</th>
+								<th>Nombre y apellido</th>
+								<th>Acciones</th>
+							</tr>
+						{% endif %}
 					</thead>
 					<tbody>
 						{% if pacientes %}
@@ -34,7 +36,16 @@
 								</tr>
 							{% endfor %}
 						{% else %}
-							<h1>No hay registros de pacientes</h1>
+						<center>
+							<h5> 
+								<i class="bi bi-info-square" style="color: rgb(255, 102, 0);">
+									No hay registros de pacientes
+								</i>
+							</h5>
+							<br>
+							<a onclick="history.back()" class="btn btn-secondary"><i class="bi bi-backspace"></i> Atras</a>
+						</center>
+							
 						{% endif %}
 
 						{% if messages %}
