--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/modificar_cita.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/modificar_cita.html
@@ -42,8 +42,8 @@
                     <div style="margin: 20px;" >
                         <br>
                         <div class="form-group">
-                            <label for="tratamiento_simple"> Motivo de Consulta</label>
-                                {{form.tratamiento_simple}}<br>
+                            <label for="c.tratamiento_solicitado" or for="c.tratamiento_simple"> Motivo de Consulta</label>
+                                {{form.tratamiento_solicitado}} or {{form.tratamiento_simple}}<br>
                         </div>
                         <br>
 
