--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos_asignados.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos_asignados.html
@@ -117,7 +117,7 @@
                         &nbsp;
                         <a onclick = "history.back()" class="btn btn-secondary"  >
                             <i class="bi-x-circle"></i> 
-                            Atras
+                            Atrás
                         </a>
                     </div>
                 </table>
