--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos.html
@@ -70,7 +70,7 @@
                         </thead>
 
                         <tbody>
-                                {%for c in tratamiento%}
+                                {%for c in tratamientos%}
                                 <tr>
                                     <td >{{forloop.counter}}</td>
                                     <td >{{c.nombre_tratamiento}}</td>
