Costo unitario en listado insumos

--- a/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/listar_insumos.html
+++ b/Proyecto2/SmileSoft/gestion_inventario_insumos/templates/insumo/listar_insumos.html
@@ -55,7 +55,7 @@
                             <tr>
                                 <th>Nro Insumo</th>
                                 <th>Nombre </th>
-                                <th>Costo</th>  
+                                <th>Costo Unitario</th>  
                                 <th>Fecha de Caducidad</th> 
                                 <th>Cantidad Insumo</th>
                                 <th>Unidad</th> 
